add servlet module done